--- a/FEM/fem_analysis_light.ipynb
+++ b/FEM/fem_analysis_light.ipynb
@@ -408,7 +408,7 @@
     "center_pos = []\n",
     "for i in range(cr_shape[0]):\n",
     "    for j in range(cr_shape[1]):\n",
-    "        center_pos.append(gaussian_center(stack_4d_cropped[i, j], cbox_edge=8))\n",
+    "        center_pos.append(gaussian_center(stack_4d_cropped[i, j], cbox_edge=10))\n",
     "        \n",
     "center_pos = np.asarray(center_pos)\n",
     "center_pos = np.reshape(center_pos, (cr_shape[0], cr_shape[1], -1))\n",
@@ -635,7 +635,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(10, 10))\n",
-    "tmp_radius = 22\n",
+    "tmp_radius = 7\n",
     "tmp = radial_indices(cr_shape[2:], [tmp_radius], center=center_mean.tolist())\n",
     "plt.imshow(tmp)\n",
     "plt.imshow(np.log(stack_4d_cropped[3, 3]), alpha=0.9)\n",
@@ -653,7 +653,7 @@
    "source": [
     "win_size = 3\n",
     "stride = 1\n",
-    "k_selected = 22"
+    "k_selected = 7"
    ]
   },
   {
@@ -677,7 +677,7 @@
     "print(mask[int((win_size-1)/2):-int(win_size/2), int((win_size-1)/2):-int(win_size/2)].shape)\n",
     "print(bin_shape)\n",
     "\n",
-    "fig, ax = plt.subplots(1, 4, figsize=(7, 15))\n",
+    "fig, ax = plt.subplots(1, 4, figsize=(12, 3))\n",
     "ax[0].imshow(k_var_map[int((win_size-1)/2):-int(win_size/2), int((win_size-1)/2):-int(win_size/2)], cmap=\"afmhot\")\n",
     "#ax[0].imshow(mask, cmap=\"gray\", alpha=0.5)\n",
     "ax[0].axis(\"off\")\n",
@@ -710,7 +710,7 @@
     "mask = np.zeros(f_flat.shape[:2])\n",
     "mask[int((win_size-1)/2):-int(win_size/2), int((win_size-1)/2):-int(win_size/2)] = 1\n",
     "\n",
-    "fig, ax = plt.subplots(1, 2, figsize=(5, 15))\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(6, 3))\n",
     "ax[0].imshow(-dp_mse, cmap=\"viridis\")\n",
     "ax[0].axis(\"off\")\n",
     "ax[1].imshow(dp_ssim, cmap=\"viridis\")\n",
@@ -753,36 +753,7 @@
     "high_ssim = dp_ssim.clip(min=(np.mean(dp_ssim)+th_sigma*np.std(dp_ssim)))\n",
     "low_mse = dp_mse.clip(max=(np.mean(dp_mse)-th_sigma*np.std(dp_mse)))\n",
     "\n",
-    "fig, ax = plt.subplots(1, 5, figsize=(5, 15))\n",
-    "ax[0].imshow(high_var, cmap=\"viridis\")\n",
-    "ax[0].axis(\"off\")\n",
-    "ax[1].imshow(-low_dif, cmap=\"viridis\")\n",
-    "ax[1].axis(\"off\")\n",
-    "ax[2].imshow(-low_std, cmap=\"viridis\")\n",
-    "ax[2].axis(\"off\")\n",
-    "ax[3].imshow(high_ssim, cmap=\"viridis\")\n",
-    "ax[3].axis(\"off\")\n",
-    "ax[4].imshow(-low_mse, cmap=\"viridis\")\n",
-    "ax[4].axis(\"off\")\n",
-    "fig.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99f6cbd9-9544-4684-a093-d3d10584672c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "th_sigma = 0.5\n",
-    "high_var = k_var_map.clip(min=(np.mean(k_var_map)+th_sigma*np.std(k_var_map)))[int((win_size-1)/2):-int(win_size/2), int((win_size-1)/2):-int(win_size/2)]\n",
-    "low_dif = local_dif.clip(max=(np.mean(local_dif)-0.5*np.std(local_dif)))\n",
-    "low_std = local_std.clip(max=(np.mean(local_std)-th_sigma*np.std(local_std)))\n",
-    "high_ssim = dp_ssim.clip(min=(np.mean(dp_ssim)+th_sigma*np.std(dp_ssim)))\n",
-    "low_mse = dp_mse.clip(max=(np.mean(dp_mse)-th_sigma*np.std(dp_mse)))\n",
-    "\n",
-    "fig, ax = plt.subplots(1, 5, figsize=(5, 15))\n",
+    "fig, ax = plt.subplots(1, 5, figsize=(15, 3))\n",
     "ax[0].imshow(high_var, cmap=\"viridis\")\n",
     "ax[0].axis(\"off\")\n",
     "ax[1].imshow(-low_dif, cmap=\"viridis\")\n",
@@ -840,6 +811,96 @@
     "    axs.plot(selected_region[i])\n",
     "    axs.grid()\n",
     "    \n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1a9a958-77c8-4a69-b75d-a30bda2236dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "th_sigma = 1.66\n",
+    "high_ssim = dp_ssim.clip(min=(np.mean(dp_ssim)+th_sigma*np.std(dp_ssim)))\n",
+    "high_ind = np.where(high_ssim > (np.mean(dp_ssim)+th_sigma*np.std(dp_ssim)))\n",
+    "\n",
+    "print(len(high_ind[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34195ba1-9f1e-4f30-bbab-f1782cf0a42c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(high_ind[0])):\n",
+    "    y_pos, x_pos = high_ind[0][i], high_ind[1][i]\n",
+    "    print(y_pos, x_pos)\n",
+    "\n",
+    "    ref_dp = f_flat[y_pos, x_pos]\n",
+    "    ssim_result = []\n",
+    "    mse_result = []\n",
+    "\n",
+    "    for i in range(cr_shape[0]):\n",
+    "        for j in range(cr_shape[1]):\n",
+    "            tmp_dp = f_flat[i, j]\n",
+    "            mse_result.append(mean_squared_error(ref_dp/np.max(ref_dp), tmp_dp/np.max(tmp_dp)))\n",
+    "            ssim_result.append(ssim(ref_dp/np.max(ref_dp), tmp_dp/np.max(tmp_dp)))\n",
+    "\n",
+    "    ssim_result = np.asarray(ssim_result).reshape(cr_shape[:2])\n",
+    "    ssim_result = ssim_result / np.max(ssim_result)\n",
+    "    mse_result = np.asarray(mse_result).reshape(cr_shape[:2])\n",
+    "    mse_result = mse_result / np.max(mse_result)\n",
+    "\n",
+    "    ssim_result[y_pos, x_pos] = 0.0\n",
+    "    mse_result[y_pos, x_pos] = 1.0\n",
+    "\n",
+    "    fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "    ax[0].imshow(-mse_result, cmap=\"viridis\")\n",
+    "    ax[0].scatter(x_pos, y_pos, c=\"red\")\n",
+    "    ax[0].axis(\"off\")\n",
+    "    ax[1].imshow(ssim_result, cmap=\"viridis\")\n",
+    "    ax[1].scatter(x_pos, y_pos, c=\"red\")\n",
+    "    ax[1].axis(\"off\")\n",
+    "    fig.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5f426f4-f64f-45e0-9b55-b8c6f01e5fed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pos, x_pos = 10, 10\n",
+    "\n",
+    "ref_dp = f_flat[y_pos, x_pos]\n",
+    "ssim_result = []\n",
+    "mse_result = []\n",
+    "\n",
+    "for i in range(cr_shape[0]):\n",
+    "    for j in range(cr_shape[1]):\n",
+    "        tmp_dp = f_flat[i, j]\n",
+    "        mse_result.append(mean_squared_error(ref_dp/np.max(ref_dp), tmp_dp/np.max(tmp_dp)))\n",
+    "        ssim_result.append(ssim(ref_dp/np.max(ref_dp), tmp_dp/np.max(tmp_dp)))\n",
+    "        \n",
+    "ssim_result = np.asarray(ssim_result).reshape(cr_shape[:2])\n",
+    "ssim_result = ssim_result / np.max(ssim_result)\n",
+    "mse_result = np.asarray(mse_result).reshape(cr_shape[:2])\n",
+    "mse_result = mse_result / np.max(mse_result)\n",
+    "\n",
+    "ssim_result[y_pos, x_pos] = 0.0\n",
+    "mse_result[y_pos, x_pos] = 1.0\n",
+    "\n",
+    "fig, ax = plt.subplots(2, 1, figsize=(15, 4))\n",
+    "ax[0].imshow(-mse_result, cmap=\"viridis\")\n",
+    "ax[0].axis(\"off\")\n",
+    "ax[1].imshow(ssim_result, cmap=\"viridis\")\n",
+    "ax[1].axis(\"off\")\n",
+    "fig.tight_layout()\n",
     "plt.show()"
    ]
   }
