--- a/FEM/fem_analysis_comparison.ipynb
+++ b/FEM/fem_analysis_comparison.ipynb
@@ -14,7 +14,8 @@
     "import tkinter.filedialog as tkf\n",
     "import ipywidgets as pyw\n",
     "from tabulate import tabulate\n",
-    "from sklearn.cluster import DBSCAN"
+    "from sklearn.cluster import DBSCAN\n",
+    "plt.rcParams['font.family'] = 'Times New Roman'"
    ]
   },
   {
