--- a/FEM/fem_analysis_revised.ipynb
+++ b/FEM/fem_analysis_revised.ipynb
@@ -70,7 +70,6 @@
     "    else:\n",
     "        return r, radial_avg\n",
     "    \n",
-    "\n",
     "def load_binary_4D_stack(img_adr, datatype, original_shape, final_shape, log_scale=False):\n",
     "    stack = np.fromfile(img_adr, dtype=datatype)\n",
     "    stack = stack.reshape(original_shape)\n",
@@ -123,40 +122,12 @@
     "    angle_arr = np.around(angle_arr)\n",
     "    \n",
     "    ai = np.argsort(angle_arr[ri])\n",
-    "    r_sort = (ri[0][ai], ri[1][ai])\n",
+    "    r_sort = (ri[1][ai], ri[0][ai])\n",
     "    a_sort = np.sort(angle_arr[ri])\n",
     "        \n",
     "    return r_sort, a_sort\n",
     "\n",
-    "def point_circle(image, radius, center=None):\n",
-    "    \n",
-    "    y, x = np.indices(image.shape)\n",
-    "    y = y.astype(\"float64\")\n",
-    "    x = x.astype(\"float64\")\n",
-    "    \n",
-    "    if not center:\n",
-    "        center = np.array([(y.max()-y.min())/2.0, (x.max()-x.min())/2.0])\n",
-    "    \n",
-    "    y -= center[0]\n",
-    "    x -= center[1]\n",
-    "    \n",
-    "    angle_arr = np.zeros(image.shape)\n",
-    "    for i in range(image.shape[0]):\n",
-    "        for j in range(image.shape[1]):\n",
-    "            angle_arr[i, j] = np.angle(complex(x[i, j], y[i, j]), deg=True)\n",
-    "            \n",
-    "    angle_arr = angle_arr + 180\n",
-    "    #print(angle_arr)\n",
-    "    r = np.hypot(y, x)\n",
-    "    r = np.around(r)\n",
-    "    ri = np.where(r == radius)\n",
-    "    angle_sel = angle_arr[ri]\n",
-    "    value_sel = image[ri]\n",
-    "\n",
-    "    return angle_arr, angle_sel, value_sel\n",
-    "\n",
     "def local_var_similarity(var_map, w_size, stride):\n",
-    "\n",
     "    var_map = np.asarray(var_map)\n",
     "    rows = range(0, var_map.shape[0]-w_size+1, stride)\n",
     "    cols = range(0, var_map.shape[1]-w_size+1, stride)\n",
@@ -184,7 +155,6 @@
     "    return surr_avg, surr_std, surr_dif, new_shape\n",
     "\n",
     "def local_DP_similarity(f_stack, w_size, stride):\n",
-    "\n",
     "    f_stack = np.asarray(f_stack)\n",
     "    rows = range(0, f_stack.shape[0]-w_size+1, stride)\n",
     "    cols = range(0, f_stack.shape[1]-w_size+1, stride)\n",
@@ -579,7 +549,7 @@
    "source": [
     "k_ind, a_ind = indices_at_r(f_shape[2:], k_selected, c_pos)\n",
     "\n",
-    "f_flat = stack_4d[:, :, k_ind[1], k_ind[0]]\n",
+    "f_flat = stack_4d[:, :, k_ind[0], k_ind[1]]\n",
     "print(f_flat.shape)\n",
     "\n",
     "dp_mse, dp_ssim, bin_shape = local_DP_similarity(f_flat, win_size, stride)\n",
@@ -740,19 +710,26 @@
    },
    "outputs": [],
    "source": [
-    "k_range = np.arange(20, 40, 1)\n",
+    "k_range = np.arange(20, 40, 5)\n",
     "start_time = time.process_time()\n",
     "ac_spectra = []\n",
     "ac_fft_stack = []\n",
-    "angles = np.arange(361)\n",
+    "angle_sampling = 361\n",
+    "angles = np.arange(angle_sampling)\n",
+    "tril_mask = np.ones((angle_sampling, angle_sampling))\n",
+    "tril_mask = np.triu(tril_mask, 0)\n",
+    "tril_mask[np.where(tril_mask==0)] = np.nan\n",
+    "\n",
     "for k in k_range:\n",
+    "    k_ind, a_ind = indices_at_r(f_shape[2:], k, c_pos)\n",
     "    temp_spectra = []\n",
     "    temp_fft_stack = []\n",
     "    for i in range(f_shape[0]):\n",
     "        for j in range(f_shape[1]):\n",
-    "            _, angle_sel, value_sel = point_circle(stack_4d[i, j], k, c_pos)\n",
-    "            values = np.zeros(361)\n",
-    "            values[angle_sel.astype(int)] = value_sel\n",
+    "            value_sel = stack_4d[i, j, k_ind[0], k_ind[1]]\n",
+    "            values = np.zeros(angle_sampling)\n",
+    "            values[a_ind.astype(int)] = value_sel\n",
+    "\n",
     "            dummy = np.roll(values, 1)\n",
     "            value_stack = np.vstack((values, dummy))\n",
     "            for l in range(len(values)-2):\n",
@@ -760,12 +737,11 @@
     "                value_stack = np.vstack((value_stack, dummy))\n",
     "\n",
     "            ang_corr = np.multiply(value_stack, values[np.newaxis, :])\n",
-    "            ang_corr = np.triu(ang_corr, 0)\n",
+    "            ang_corr = np.multiply(np.triu(ang_corr, 0), tril_mask)\n",
     "\n",
     "            value_avgsq = np.mean(value_sel)**2\n",
-    "            ac_spectrum = np.sum(ang_corr, axis=1) / len(value_sel)\n",
-    "            ac_spectrum = (ac_spectrum / value_avgsq) - value_avgsq\n",
-    "\n",
+    "            ac_spectrum = np.nanmean(ang_corr, axis=1)\n",
+    "            ac_spectrum = (ac_spectrum / value_avgsq) - 1\n",
     "            ac_fft = np.abs(np.fft.fft(ac_spectrum))\n",
     "            \n",
     "            temp_spectra.append(ac_spectrum)\n",
@@ -816,7 +792,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_ind = np.where(k_range==k_selected)[0][0]\n",
+    "k_ind = np.where(k_range==25)[0][0]\n",
     "print(k_ind)\n",
     "rot_sym = [2, 3, 4, 5, 6, 10]\n",
     "\n",
