--- a/imaging/virtual_imaging_4D_STEM.ipynb
+++ b/imaging/virtual_imaging_4D_STEM.ipynb
@@ -5,13 +5,13 @@
    "id": "popular-optimization",
    "metadata": {},
    "source": [
-    "<h2>Virtual Imaging Techniques for 4D-STEM data (GPU version)</h2>\n",
+    "<h2>Virtual Imaging Techniques for 4D-STEM data</h2>\n",
     "<strong>Jinseok Ryu, Ingyu Yoo<br></strong>\n",
     "<strong>Electron Microscopy and Spectroscopy Lab.<br></strong>\n",
     "<strong>Department of Materials Science and Engineering<br></strong>\n",
     "<strong>Seoul National University<br><br></strong>\n",
     "\n",
-    "<strong>last update : 20210617</strong>"
+    "<strong>last update : 20210929</strong>"
    ]
   },
   {
@@ -24,9 +24,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from scipy import optimize\n",
-    "from scipy.ndimage import zoom\n",
-    "import torch\n",
+    "import cv2\n",
     "\n",
     "class sstem_python():\n",
     "    \n",
@@ -36,40 +34,14 @@
     "        self.original_pacbed = np.mean(self.original_stack, axis=(0, 1))\n",
     "        self.ang_per_pixel = ang_per_pixel\n",
     "        self.mrad_per_pixel = mrad_per_pixel\n",
-    "        \n",
-    "        print(\"the shape of the data =\", self.original_shape)\n",
-    "        \n",
-    "        if torch.cuda.is_available():\n",
-    "            print(\"%d gpu available\"%(torch.cuda.device_count()))\n",
-    "            self.cuda_device = torch.device(\"cuda:0\")\n",
-    "            print(torch.cuda.get_device_name(self.cuda_device))\n",
-    "            torch.cuda.set_device(self.cuda_device)\n",
-    "        else:\n",
-    "            print(\"there is no GPU available\")\n",
-    "            self.cuda_device = None\n",
     "    \n",
-    "    def find_center(self, com=True, gaussian=False):\n",
-    "        \n",
-    "        if com and gaussian:\n",
-    "            print(\"Warning! Choose only one option to find the center\")\n",
-    "        \n",
-    "        if not com and not gaussian:\n",
-    "            print(\"Warning! Choose at least one option to find the center\")\n",
+    "    def find_center(self):\n",
     "        \n",
     "        Y, X = np.indices(self.original_pacbed.shape)\n",
     "        com_y = np.sum(self.original_pacbed * Y) / np.sum(self.original_pacbed)\n",
     "        com_x = np.sum(self.original_pacbed * X) / np.sum(self.original_pacbed)\n",
-    "        self.com_ct = [com_y, com_x]\n",
-    "        \n",
-    "        (_, center_y, center_x, _, _) = fitgaussian(self.original_pacbed)\n",
-    "        self.gauss_ct = [center_y, center_x]\n",
-    "        \n",
-    "        if com:\n",
-    "            self.ct=self.com_ct\n",
-    "        \n",
-    "        else:\n",
-    "            self.ct=self.gauss_ct\n",
-    "        \n",
+    "        self.ct = [com_y, com_x]        \n",
+    "\n",
     "    def disk_extract(self, buffer_size=0):\n",
     "        grad = np.gradient(self.original_pacbed)\n",
     "        grad_map = grad[0]**2 + grad[1] **2\n",
@@ -80,17 +52,21 @@
     "        \n",
     "        print(\"radius of the BF disk = %.2f mrad\"%(self.mrad_per_pixel*self.least_R))\n",
     "        \n",
-    "        self.ct_ind  = np.around(self.ct).astype(int) #np.int\n",
-    "        self.cropped_size = np.around(self.least_R + buffer_size).astype(int) #np.int\n",
-    "        \n",
+    "        self.cropped_size = np.around(self.least_R + buffer_size).astype(int)\n",
+    "\n",
+    "        if self.cropped_size > self.ct[0] or self.cropped_size > self.ct[1]:\n",
+    "            self.cropped_size = np.min(self.ct).astype(int)\n",
+    "  \n",
     "        print(\"radius of the RoI = %.2f mrad\"%(self.mrad_per_pixel*self.cropped_size))\n",
     "        \n",
-    "        if self.cropped_size > self.ct_ind[0] or self.cropped_size > self.ct_ind[1]:\n",
-    "            self.cropped_size = np.min(ct_ind)\n",
+    "        h_si = np.floor(self.ct[0]-self.cropped_size).astype(int)\n",
+    "        h_fi = np.ceil(self.ct[0]+self.cropped_size).astype(int)\n",
+    "        w_si = np.floor(self.ct[1]-self.cropped_size).astype(int)\n",
+    "        w_fi = np.ceil(self.ct[1]+self.cropped_size).astype(int)\n",
     "        \n",
     "        self.c_ct = [self.cropped_size, self.cropped_size]\n",
-    "        self.c_stack = self.original_stack[:, :, self.ct_ind[0]-self.cropped_size:self.ct_ind[0]+self.cropped_size+1, \n",
-    "                               self.ct_ind[1]-self.cropped_size:self.ct_ind[1]+self.cropped_size+1].copy()\n",
+    "        \n",
+    "        self.c_stack = self.original_stack[:, :, h_si:h_fi, w_si:w_fi].copy()\n",
     "        self.c_shape = self.c_stack.shape\n",
     "        self.c_pacbed = np.mean(self.c_stack, axis=(0, 1))\n",
     "        \n",
@@ -101,7 +77,7 @@
     "        self.ADF_detector = radial_indices(self.original_pacbed.shape, ADF, self.mrad_per_pixel, center=self.ct)\n",
     "        self.ADF_stem = np.sum(np.multiply(self.original_stack, self.ADF_detector), axis=(2, 3))\n",
     "        \n",
-    "    def symmetry_evaluation(self, angle, resampling=1, also_mirror=False):\n",
+    "    def symmetry_evaluation(self, angle, also_mirror=False):\n",
     "        \"\"\"\n",
     "        Krajnak, M. and J. Etheridge, Proc Natl Acad Sci U S A, 2020. 117(45): p. 27805-27810.\n",
     "        \"\"\"\n",
@@ -111,11 +87,15 @@
     "        \n",
     "        ri = radial_indices(self.c_pacbed.shape, [0, self.cropped_size], 1, center=self.c_ct)\n",
     "        \n",
+    "        angle = angle * np.pi/180\n",
+    "        alpha, beta = np.cos(angle), np.sin(angle)\n",
+    "        M = np.array([[alpha, beta, (1-alpha)*self.c_ct[1]-beta*self.c_ct[0]], \n",
+    "                      [-beta, alpha, beta*self.c_ct[1]+(1-alpha)*self.c_ct[0]]])\n",
+    "        \n",
     "        for i in range(self.original_shape[0]):\n",
     "            for j in range(self.original_shape[1]):\n",
     "                tmp_dp = self.c_stack[i,j,:,:].copy()\n",
-    "                newdata = rotation(tmp_dp, self.c_ct, angle, resampling, torch_device=self.cuda_device)\n",
-    "                newdata = np.multiply(newdata, ri)\n",
+    "                newdata = np.multiply(rotation(tmp_dp, M), ri)\n",
     "                rotation_stack.append(newdata)\n",
     "                r_correl[i,j] = correlation(tmp_dp/np.max(tmp_dp), newdata)\n",
     "                \n",
@@ -171,39 +151,6 @@
     "        \n",
     "        self.potential = get_icom(self.ysh, self.xsh, hpass, lpass)\n",
     "\n",
-    "#####################################################################################\n",
-    "# https://scipy-cookbook.readthedocs.io/items/FittingData.html\n",
-    "def gaussian(height, center_x, center_y, width_x, width_y):\n",
-    "    \"\"\"Returns a gaussian function with the given parameters\"\"\"\n",
-    "    width_x = float(width_x)\n",
-    "    width_y = float(width_y)\n",
-    "    return lambda x,y: height*np.exp(\n",
-    "                -(((center_x-x)/width_x)**2+((center_y-y)/width_y)**2)/2)\n",
-    "\n",
-    "def moments(data):\n",
-    "    \"\"\"Returns (height, x, y, width_x, width_y)\n",
-    "    the gaussian parameters of a 2D distribution by calculating its\n",
-    "    moments \"\"\"\n",
-    "    total = data.sum()\n",
-    "    X, Y = np.indices(data.shape) # row, col\n",
-    "    x = (X*data).sum()/total # row\n",
-    "    y = (Y*data).sum()/total # col\n",
-    "    col = data[:, int(y)]\n",
-    "    width_x = np.sqrt(np.abs((np.arange(col.size)-y)**2*col).sum()/col.sum()) # row\n",
-    "    row = data[int(x), :]\n",
-    "    width_y = np.sqrt(np.abs((np.arange(row.size)-x)**2*row).sum()/row.sum()) # col\n",
-    "    height = data.max()\n",
-    "    return height, x, y, width_x, width_y\n",
-    "\n",
-    "def fitgaussian(data):\n",
-    "    \"\"\"Returns (height, x, y, width_x, width_y)\n",
-    "    the gaussian parameters of a 2D distribution found by a fit\"\"\"\n",
-    "    params = moments(data)\n",
-    "    errorfunction = lambda p: np.ravel(gaussian(*p)(*np.indices(data.shape)) -\n",
-    "                                 data)\n",
-    "    p, success = optimize.leastsq(errorfunction, params)\n",
-    "    return p\n",
-    "#####################################################################################\n",
     "\n",
     "def radial_indices(shape, radial_range, scale, center=None):\n",
     "    y, x = np.indices(shape)\n",
@@ -231,50 +178,16 @@
     "\n",
     "    return correlation[0]\n",
     "\n",
-    "def rotation(data, center, angle, resampling=1, torch_device=None):\n",
-    "    #Use crop image #Input : 2d data, angle(degree) /return : 2d data\n",
-    "    newdata = np.zeros(data.shape)\n",
-    "    center = np.array(center)\n",
+    "def rotation(data, RM):\n",
     "    \n",
-    "    if resampling != 1:\n",
-    "        data = zoom(data, resampling, mode=\"nearest\")\n",
-    "        center *= resampling\n",
-    "        \n",
-    "    angle = angle * np.pi/180\n",
-    "    alpha, beta = np.cos(angle), np.sin(angle)\n",
-    "    \n",
-    "    M = np.array([[alpha, beta, (1-alpha)*center[1]-beta*center[0]], \n",
-    "         [-beta, alpha, beta*center[1]+(1-alpha)*center[0]]])\n",
-    "    \n",
-    "    y, x = np.indices(data.shape)\n",
-    "    ones = np.ones(data.shape)\n",
-    "    y = y[:, :, np.newaxis]\n",
-    "    x = x[:, :, np.newaxis]\n",
-    "    ones = ones[:, :, np.newaxis]\n",
-    "    ind_stack = np.stack((y, x, ones), axis=2)\n",
-    "    \n",
-    "    if torch_device != None:\n",
-    "        M = torch.from_numpy(M)\n",
-    "        M = M.to(torch_device)\n",
-    "        ind_stack = torch.from_numpy(ind_stack)\n",
-    "        ind_stack = ind_stack.to(torch_device)\n",
-    "    \n",
-    "    transformed_ind = M @ ind_stack / resampling\n",
-    "    if torch_device != None:\n",
-    "        transformed_ind = transformed_ind.cpu().numpy()\n",
-    "    transformed_ind = np.around(transformed_ind.squeeze()).astype(int)\n",
-    "    transformed_ind = transformed_ind.reshape(-1, 2)\n",
-    "    transformed_ind[np.where(transformed_ind>=np.min(newdata.shape))] = 0\n",
-    "    transformed_ind[np.where(transformed_ind<0)] = 0\n",
-    "    \n",
-    "    newdata[transformed_ind[:, 0], transformed_ind[:, 1]] = data.flatten()\n",
+    "    rotated = cv2.warpAffine(data, RM, data.shape)\n",
     "                \n",
-    "    return newdata/np.max(newdata)\n",
+    "    return rotated/np.max(rotated)\n",
     "\n",
     "def mirror(data, center):\n",
     "    #Input data : 2d # Return : Correlation value\n",
-    "    data1 = data[:, :center[1]-1]\n",
-    "    data2 = np.flip(data, axis=1)[:, :center[1]-1]\n",
+    "    data1 = data[:, :int(center[1]-1)]\n",
+    "    data2 = np.flip(data, axis=1)[:, :int(center[1]-1)]\n",
     "    value = correlation(data1, data2)        \n",
     "    \n",
     "    return value\n",
@@ -352,7 +265,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = sstem_python(f_stack, 1, 1)\n",
+    "ang_per_pixel = 1\n",
+    "mrad_per_pixel = 1\n",
+    "test = sstem_python(f_stack, ang_per_pixel, mrad_per_pixel)\n",
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
     "ax.imshow(test.original_pacbed, cmap=\"jet\")\n",
@@ -367,16 +282,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test.find_center(com=True, gaussian=False)\n",
+    "test.find_center()\n",
     "print(test.ct)\n",
     "\n",
-    "fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
-    "ax[0].imshow(test.original_pacbed, cmap=\"jet\")\n",
-    "ax[0].axis(\"off\")\n",
-    "ax[0].scatter(test.com_ct[1], test.com_ct[0], s=15, c=\"k\")\n",
-    "ax[1].imshow(test.original_pacbed, cmap=\"jet\")\n",
-    "ax[1].axis(\"off\")\n",
-    "ax[1].scatter(test.gauss_ct[1], test.gauss_ct[0], s=15, c=\"k\")\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
+    "ax.imshow(test.original_pacbed, cmap=\"jet\")\n",
+    "ax.axis(\"off\")\n",
+    "ax.scatter(test.ct[1], test.ct[0], s=15, c=\"k\")\n",
     "fig.tight_layout()\n",
     "plt.show()"
    ]
@@ -388,8 +300,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test.disk_extract(buffer_size=15)\n",
+    "test.disk_extract(buffer_size=2)\n",
     "print(test.c_stack.shape)\n",
+    "print(test.c_ct)\n",
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
     "ax.imshow(test.c_pacbed, cmap=\"jet\")\n",
@@ -407,14 +320,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BF_det = [0, 25]\n",
-    "ADF_det = [50, 80]\n",
-    "mrad_per_pixel = 1\n",
+    "BF_det = np.array([0, test.least_R]) / mrad_per_pixel\n",
+    "ADF_det = np.array([1.5*test.least_R, 2.0*test.least_R]) / mrad_per_pixel\n",
+    "\n",
+    "print(BF_det, ADF_det)\n",
+    "\n",
     "test.virtual_stem(BF_det, ADF_det)\n",
     "\n",
     "fig, ax = plt.subplots(2, 2, figsize=(10, 10))\n",
     "ax[0][0].imshow(test.original_pacbed, cmap=\"jet\")\n",
     "ax[0][0].imshow(test.BF_detector, cmap=\"gray\", alpha=0.5)\n",
+    "ax[0][0].scatter(test.ct[1], test.ct[0], s=15, c=\"k\")\n",
     "ax[0][0].set_title(\"BF detector\")\n",
     "ax[0][0].axis(\"off\")\n",
     "ax[0][1].imshow(test.BF_stem, cmap=\"afmhot\")\n",
@@ -422,6 +338,7 @@
     "ax[0][1].axis(\"off\")\n",
     "ax[1][0].imshow(test.original_pacbed, cmap=\"jet\")\n",
     "ax[1][0].imshow(test.ADF_detector, cmap=\"gray\", alpha=0.5)\n",
+    "ax[1][0].scatter(test.ct[1], test.ct[0], s=15, c=\"k\")\n",
     "ax[1][0].set_title(\"ADF detector\")\n",
     "ax[1][0].axis(\"off\")\n",
     "ax[1][1].imshow(test.ADF_stem, cmap=\"afmhot\")\n",
@@ -438,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test.DPC(correct_rotation=True, n_theta=100, hpass=0.01, lpass=0.01)\n",
+    "test.DPC(correct_rotation=True, n_theta=100, hpass=0.05, lpass=0.05)\n",
     "\n",
     "print(\"optimized angle =\", test.c_theta*180/np.pi)\n",
     "fig, ax = plt.subplots(1, 4, figsize=(28, 7))\n",
@@ -484,16 +401,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rotated_pacbed = rotation(test.c_pacbed, test.c_ct, test.c_theta*180/np.pi, 1.5)\n",
+    "alpha, beta = np.cos(test.c_theta*180/np.pi), np.sin(test.c_theta*180/np.pi)\n",
+    "M = np.array([[alpha, beta, (1-alpha)*test.c_ct[1]-beta*test.c_ct[0]], \n",
+    "              [-beta, alpha, beta*test.c_ct[1]+(1-alpha)*test.c_ct[0]]])\n",
+    "\n",
+    "rotated_pacbed = rotation(test.c_pacbed, M)\n",
     "ri = radial_indices(test.c_pacbed.shape, [0, test.cropped_size], 1, center=test.c_ct)\n",
     "mirror_plane = np.zeros(rotated_pacbed.shape)\n",
-    "mirror_plane[:, test.c_ct[1]] = 1\n",
+    "mirror_plane[:, int(test.c_ct[1])] = 1\n",
     "fig, ax = plt.subplots(1, 2, figsize=(10, 5))\n",
-    "ax[0].imshow(test.c_pacbed, cmap=\"jet\")\n",
-    "ax[0].imshow(mirror_plane, cmap=\"gray\", alpha=0.5)\n",
+    "ax[0].imshow(np.multiply(test.c_pacbed, ri), cmap=\"jet\")\n",
+    "ax[0].imshow(mirror_plane, cmap=\"gray\", alpha=0.2)\n",
+    "ax[0].scatter(test.c_ct[1], test.c_ct[0], s=15, c=\"k\")\n",
     "ax[0].axis(\"off\")\n",
     "ax[1].imshow(np.multiply(rotated_pacbed, ri), cmap=\"jet\")\n",
-    "ax[1].imshow(mirror_plane, cmap=\"gray\", alpha=0.5)\n",
+    "ax[1].imshow(mirror_plane, cmap=\"gray\", alpha=0.2)\n",
+    "ax[1].scatter(test.c_ct[1], test.c_ct[0], s=15, c=\"k\")\n",
     "ax[1].axis(\"off\")\n",
     "fig.tight_layout()\n",
     "plt.show()"
@@ -508,15 +431,15 @@
    "source": [
     "start = time.process_time()\n",
     "rot_angle = 45\n",
-    "rotated_stack, rot_sym_img, mir_sym_img = test.symmetry_evaluation(rot_angle, resampling=1.5, also_mirror=True)\n",
+    "rotated_stack, rot_sym_img, mir_sym_img = test.symmetry_evaluation(rot_angle, also_mirror=True)\n",
     "print(\"%d seconds have passed\"%(time.process_time()-start))\n",
-    "f, a = plt.subplots(1,2, figsize=(10,5))\n",
-    "a[0].imshow(rot_sym_img, cmap=\"afmhot\")\n",
-    "a[0].set_title(\"Rotation angle: {}\".format(rot_angle))\n",
-    "a[0].axis(\"off\")\n",
-    "a[1].imshow(mir_sym_img, cmap=\"afmhot\")\n",
-    "a[1].set_title(\"Mirror angle: {}\".format(rot_angle))\n",
-    "a[1].axis(\"off\")\n",
+    "fig, ax = plt.subplots(1, 2, figsize=(10,5))\n",
+    "ax[0].imshow(rot_sym_img, cmap=\"inferno\")\n",
+    "ax[0].set_title(\"Rotation angle: {}\".format(rot_angle))\n",
+    "ax[0].axis(\"off\")\n",
+    "ax[1].imshow(mir_sym_img, cmap=\"inferno\")\n",
+    "ax[1].set_title(\"Mirror angle: {}\".format(rot_angle))\n",
+    "ax[1].axis(\"off\")\n",
     "plt.show()"
    ]
   },
@@ -529,15 +452,19 @@
    "source": [
     "fig, ax = plt.subplots(2, 2, figsize=(10, 10))\n",
     "ax[0][0].imshow(test.c_stack[0, 0], cmap=\"jet\")\n",
+    "ax[0][0].scatter(test.c_ct[1], test.c_ct[0], s=15, c=\"k\")\n",
     "ax[0][0].set_title(\"original CBED\")\n",
     "ax[0][0].axis(\"off\")\n",
     "ax[0][1].imshow(rotated_stack[0, 0], cmap=\"jet\")\n",
+    "ax[0][1].scatter(test.c_ct[1], test.c_ct[0], s=15, c=\"k\")\n",
     "ax[0][1].set_title(\"rotated CBED (angle=%d)\"%rot_angle)\n",
     "ax[0][1].axis(\"off\")\n",
     "ax[1][0].imshow(test.c_stack[5, 5], cmap=\"jet\")\n",
+    "ax[1][0].scatter(test.c_ct[1], test.c_ct[0], s=15, c=\"k\")\n",
     "ax[1][0].set_title(\"another original CBED\")\n",
     "ax[1][0].axis(\"off\")\n",
     "ax[1][1].imshow(rotated_stack[5, 5], cmap=\"jet\")\n",
+    "ax[1][1].scatter(test.c_ct[1], test.c_ct[0], s=15, c=\"k\")\n",
     "ax[1][1].set_title(\"rotated CBED (angle=%d)\"%rot_angle)\n",
     "ax[1][1].axis(\"off\")\n",
     "fig.tight_layout()\n",
