--- a/FEM/fem_analysis_revised.ipynb
+++ b/FEM/fem_analysis_revised.ipynb
@@ -10,16 +10,16 @@
     "# J. Ryu, Electron Microscopy and Spectroscopy Lab., Seoul National University\n",
     "from scipy import stats\n",
     "import numpy as np\n",
+    "import hyperspy.api as hys\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.patches as pch\n",
     "import tkinter.filedialog as tkf\n",
-    "import hyperspy.api as hys\n",
     "from scipy import optimize\n",
     "import ipywidgets as pyw\n",
     "import time\n",
+    "import tifffile\n",
     "from skimage.metrics import structural_similarity as ssim\n",
     "from skimage.metrics import mean_squared_error\n",
-    "from sklearn.cluster import DBSCAN\n",
     "plt.rcParams['font.family'] = 'Times New Roman'"
    ]
   },
@@ -145,7 +145,7 @@
     "            temp_std = np.std(local_region)\n",
     "            surr_avg.append(temp_avg)\n",
     "            surr_std.append(temp_std)\n",
-    "            diff_mse = np.mean(np.square(local_region - local_region[int(w_size**2/2)]))\n",
+    "            diff_mse = np.sum(np.square(local_region - local_region[int(w_size**2/2)]))/(w_size**2-1)\n",
     "            surr_dif.append(diff_mse)\n",
     "            \n",
     "    surr_avg = np.asarray(surr_avg).reshape(new_shape)\n",
@@ -164,9 +164,9 @@
     "    dp_ssim = []\n",
     "    for i in rows:\n",
     "        for j in cols:        \n",
-    "            local_region = f_stack[i:i+w_size, j:j+w_size]\n",
-    "            ref_dp = local_region[int(w_size/2), int(w_size/2)]\n",
-    "            local_region = local_region.reshape(w_size**2, -1)\n",
+    "            local_region = f_stack[i:i+w_size, j:j+w_size].reshape(w_size**2, -1)\n",
+    "            ref_dp = local_region[int(w_size**2/2)]\n",
+    "            local_region = np.delete(local_region, int(w_size**2/2), axis=0)\n",
     "            tmp_mse = []\n",
     "            tmp_ssim = []\n",
     "            for fdp in local_region:\n",
@@ -209,11 +209,10 @@
    "outputs": [],
    "source": [
     "# Load a data (DM)\n",
-    "stack_4d = hys.load(raw_adr).data\n",
+    "#stacl_4d = hys.load(raw_adr)\n",
+    "stack_4d = tifffile.imread(raw_adr)\n",
     "print(stack_4d.shape)\n",
-    "stack_4d = fourd_roll_axis(stack_4d)\n",
     "f_shape = stack_4d.shape\n",
-    "print(f_shape)\n",
     "\n",
     "stack_4d = stack_4d / np.max(stack_4d)\n",
     "if np.isnan(np.max(stack_4d)):\n",
@@ -222,7 +221,9 @@
     "stack_4d = stack_4d.clip(min=0.0)\n",
     "print(np.max(stack_4d))\n",
     "print(np.min(stack_4d))\n",
-    "print(np.mean(stack_4d))"
+    "print(np.mean(stack_4d))\n",
+    "\n",
+    "stack_4d_original = stack_4d.copy()"
    ]
   },
   {
@@ -240,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline"
+    "%matplotlib widget"
    ]
   },
   {
@@ -263,6 +264,7 @@
     "ax[0].axis(\"off\")\n",
     "ax[1].hist(max_int.flatten(), bins=len(max_int))\n",
     "ax[1].grid()\n",
+    "fig.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -286,6 +288,7 @@
     "ax[0].axis(\"off\")\n",
     "ax[1].hist(tot_int.flatten(), bins=len(max_int))\n",
     "ax[1].grid()\n",
+    "fig.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -300,33 +303,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "274376f9-06b9-40f9-a5d7-a45b8e2b3708",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "da65e547-3759-4239-922f-6e5a8604cb8b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# find the center position (center of mass)\n",
     "mean_dp = np.mean(stack_4d, axis=(0, 1))\n",
-    "cbox_edge = 15\n",
+    "cbox_edge = 30\n",
     "cbox_outy = int(mean_dp.shape[0]/2 - cbox_edge/2)\n",
     "cbox_outx = int(mean_dp.shape[1]/2 - cbox_edge/2)\n",
     "center_box = mean_dp[cbox_outy:-cbox_outy, cbox_outx:-cbox_outx]\n",
     "Y, X = np.indices(center_box.shape)\n",
     "com_y = np.sum(center_box * Y) / np.sum(center_box)\n",
     "com_x = np.sum(center_box * X) / np.sum(center_box)\n",
+    "c_pos_original = [com_y+cbox_outy, com_x+cbox_outx]\n",
     "c_pos = [com_y+cbox_outy, com_x+cbox_outx]\n",
     "print(c_pos)\n",
     "\n",
-    "fig, ax = plt.subplots(1, 1, figsize=(10, 10))\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
     "ax.imshow(mean_dp, cmap=\"gray\")\n",
     "ax.axis(\"off\")\n",
     "ax.scatter(c_pos[1], c_pos[0], s=15, c=\"r\")\n",
@@ -337,68 +331,199 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c002f506-5678-4232-8d51-c2a2989fae4e",
-   "metadata": {},
-   "source": [
-    "# k-point FEM"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84e3c5ab-b059-4c2d-8bb4-4cc0e66099b3",
+   "id": "da881d09-f4e7-4faf-b79c-9aa4993c19c4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib qt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebc2c06a-73fd-441e-8394-e38aaf1e336d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b78da0b4-3fb8-4b76-9a51-2a6f27170221",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "radial_map, mean_dp_radial_avg = radial_stats(mean_dp, center=c_pos, var=False)\n",
+    "\n",
     "# obtain variance map dpending on k-vector\n",
     "square_avg = np.mean(np.square(stack_4d), axis=(0,1))\n",
     "avg_square = np.square(np.mean(stack_4d, axis=(0,1)))\n",
     "mask = avg_square.copy()\n",
     "mask[np.where(avg_square == 0)] = 1.0\n",
     "var_map = (square_avg - avg_square) / mask\n",
-    "var_nonor = square_avg - avg_square\n",
     "\n",
     "# obtain radial average prifile for variance map above\n",
     "radial_map, kp_var = radial_stats(var_map, center=c_pos, var=False)\n",
     "print(kp_var.shape)\n",
-    "print(np.argmax(kp_var))\n",
-    "_, kp_nonor = radial_stats(var_nonor, center=c_pos, var=False)\n",
-    "print(kp_nonor.shape)\n",
-    "print(np.argmax(kp_nonor))\n",
-    "\n",
-    "fig, ax = plt.subplots(1, 5, figsize=(15, 3))\n",
-    "ax[0].imshow(radial_map, cmap=\"gray\")\n",
+    "print(np.argmax(kp_var))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87d590fd-c233-4c4d-8a8a-2cdb660721b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 4, figsize=(15, 3))\n",
+    "ax[0].imshow(np.log(mean_dp), cmap=\"gray\")\n",
     "ax[0].axis(\"off\")\n",
-    "ax[1].imshow(var_map, cmap=\"afmhot\")\n",
-    "ax[1].axis(\"off\")\n",
-    "ax[2].plot(kp_var, \"k-\")\n",
-    "ax[2].grid()\n",
-    "ax[3].imshow(var_nonor, cmap=\"afmhot\")\n",
-    "ax[3].axis(\"off\")\n",
-    "ax[4].plot(kp_nonor, \"k-\")\n",
-    "ax[4].grid()\n",
+    "ax[1].plot(mean_dp_radial_avg, \"k-\")\n",
+    "ax[1].grid()\n",
+    "ax[2].imshow(var_map, cmap=\"inferno\")\n",
+    "ax[2].axis(\"off\")\n",
+    "ax[3].plot(kp_var, \"k-\")\n",
+    "ax[3].grid()\n",
+    "fig.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03b8110e-c588-47a4-83b0-60d8b41553d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "side_length = 40\n",
+    "box_size = np.array([side_length, side_length])\n",
+    "dataset = []\n",
+    "\n",
+    "h_si = np.floor(c_pos[0]-box_size[0]).astype(int)\n",
+    "h_fi = np.ceil(c_pos[0]+box_size[0]).astype(int)\n",
+    "w_si = np.floor(c_pos[1]-box_size[1]).astype(int)\n",
+    "w_fi = np.ceil(c_pos[1]+box_size[1]).astype(int)\n",
+    "\n",
+    "stack_4d = stack_4d_original[:, :, h_si:h_fi, w_si:w_fi]\n",
+    "f_shape = stack_4d.shape\n",
+    "print(f_shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c377495c-e551-415e-a337-16098f476c76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find the center position (center of mass)\n",
+    "mean_dp = np.mean(stack_4d, axis=(0, 1))\n",
+    "cbox_edge = 30\n",
+    "cbox_outy = int(mean_dp.shape[0]/2 - cbox_edge/2)\n",
+    "cbox_outx = int(mean_dp.shape[1]/2 - cbox_edge/2)\n",
+    "center_box = mean_dp[cbox_outy:-cbox_outy, cbox_outx:-cbox_outx]\n",
+    "Y, X = np.indices(center_box.shape)\n",
+    "com_y = np.sum(center_box * Y) / np.sum(center_box)\n",
+    "com_x = np.sum(center_box * X) / np.sum(center_box)\n",
+    "c_pos = [com_y+cbox_outy, com_x+cbox_outx]\n",
+    "print(c_pos)\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
+    "ax.imshow(mean_dp, cmap=\"gray\")\n",
+    "ax.axis(\"off\")\n",
+    "ax.scatter(c_pos[1], c_pos[0], s=15, c=\"r\")\n",
+    "ax.add_patch(pch.Rectangle((cbox_outx, cbox_outy), cbox_edge, cbox_edge, \n",
+    "                           linewidth=1, edgecolor=\"r\", facecolor=\"none\"))\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3bf6864-3a8d-4cae-816a-eabeee8fc7b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "radial_map, mean_dp_radial_avg = radial_stats(mean_dp, center=c_pos, var=False)\n",
+    "\n",
+    "# obtain variance map dpending on k-vector\n",
+    "square_avg = np.mean(np.square(stack_4d), axis=(0,1))\n",
+    "avg_square = np.square(np.mean(stack_4d, axis=(0,1)))\n",
+    "mask = avg_square.copy()\n",
+    "mask[np.where(avg_square == 0)] = 1.0\n",
+    "var_map = (square_avg - avg_square) / mask\n",
+    "\n",
+    "# obtain radial average prifile for variance map above\n",
+    "radial_map, kp_var = radial_stats(var_map, center=c_pos, var=False)\n",
+    "print(kp_var.shape)\n",
+    "print(np.argmax(kp_var))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "827062ad-4863-4ca3-830b-3defe24117ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 4, figsize=(10, 3))\n",
+    "ax[0].imshow(np.log(mean_dp), cmap=\"gray\")\n",
+    "ax[0].axis(\"off\")\n",
+    "ax[1].plot(mean_dp_radial_avg, \"k-\")\n",
+    "ax[1].grid()\n",
+    "ax[2].imshow(var_map, cmap=\"inferno\")\n",
+    "ax[2].axis(\"off\")\n",
+    "ax[3].plot(kp_var, \"k-\")\n",
+    "ax[3].grid()\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da4a58fb-bdb1-4745-ae51-759a9208c7b7",
+   "metadata": {},
+   "source": [
+    "# rotational average"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8af801de-796d-42c7-bfa8-8f8b544bf537",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# radial average of DPs (not variance, intensity direcltly, RDF?)\n",
+    "radial_avg_stack = []\n",
+    "len_profile = []\n",
+    "for i in range(f_shape[0]):\n",
+    "    for j in range(f_shape[1]):\n",
+    "        _, radial_temp = radial_stats(stack_4d[i, j], center=c_pos, var=False)\n",
+    "        len_profile.append(len(radial_temp))\n",
+    "        radial_avg_stack.append(radial_temp)\n",
+    "\n",
+    "if len(np.unique(len_profile)) > 1:\n",
+    "    print(np.unique(len_profile))\n",
+    "    shortest = np.min(len_profile)\n",
+    "    for i in range(len(radial_avg_stack)):\n",
+    "        radial_avg_stack[i] = radial_avg_stack[i][:shortest]\n",
+    "\n",
+    "radial_avg_stack = np.asarray(radial_avg_stack).reshape(f_shape[0], f_shape[1], -1)\n",
+    "print(radial_avg_stack.shape)\n",
+    "\n",
+    "radial_avg_sum = np.sum(radial_avg_stack, axis=(0, 1))\n",
+    "print(radial_avg_sum.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe8d4b0e-70f5-4af3-8404-a717b7e060f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(10, 5))\n",
+    "ax.plot(radial_avg_sum, \"k-\")\n",
+    "ax.grid()\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53737ac4-9e90-4fa7-970f-867e965cace7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save (radial average, 3D)\n",
+    "tifffile.imsave(raw_adr[:-4]+\"_radial_avg_radial.tif\", radial_avg_stack)"
    ]
   },
   {
@@ -435,10 +560,19 @@
     "print(radial_var_stack.shape)\n",
     "\n",
     "radial_var_sum = np.sum(radial_var_stack, axis=(0, 1))\n",
-    "print(radial_var_sum.shape)\n",
-    "\n",
+    "print(radial_var_sum.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e1968ff-f751-4a58-802b-629e3572bd34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(10, 5))\n",
-    "ax.plot(radial_var_sum)\n",
+    "ax.plot(radial_var_sum, \"k-\")\n",
+    "ax.grid()\n",
     "fig.tight_layout()\n",
     "plt.show()"
    ]
@@ -451,9 +585,7 @@
    "outputs": [],
    "source": [
     "# save (radial variance, 3D)\n",
-    "radial_var_stack_save = hys.signals.Signal1D(radial_var_stack)\n",
-    "radial_var_stack_save.metadata.General.set_item(\"notes\", center_mean.tolist())\n",
-    "radial_var_stack_save.save(raw_adr[:-4]+\"_radial_var_radial.hdf5\")"
+    "tifffile.imsave(raw_adr[:-4]+\"_radial_var_radial.tif\", radial_var_stack)"
    ]
   },
   {
@@ -482,14 +614,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(10, 10))\n",
-    "tmp_radius = 24\n",
-    "tmp = radial_indices(f_shape[2:], [tmp_radius], center=c_pos)\n",
-    "plt.imshow(tmp)\n",
-    "plt.imshow(np.log(stack_4d[5, 5]), alpha=0.9)\n",
-    "tmp_ind, _ = indices_at_r(f_shape[2:], tmp_radius, center=c_pos)\n",
-    "#plt.scatter(tmp_ind[1], tmp_ind[0], alpha=0.9)\n",
+    "tmp_radius = [10, 18, 32]\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
+    "ax.imshow(np.log(stack_4d[5, 5]))\n",
+    "ax.axis(\"off\")\n",
+    "for r in tmp_radius:\n",
+    "    tmp = radial_indices(f_shape[2:], [r], center=c_pos)\n",
+    "    ax.imshow(tmp, alpha=0.1, cmap=\"gray\")\n",
+    "fig.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b20025a6-342b-4f51-bed8-80f615b65b32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.close('all')"
    ]
   },
   {
@@ -501,8 +645,7 @@
    "source": [
     "win_size = 3\n",
     "stride = 1\n",
-    "#k_selected = 30\n",
-    "k_selected = tmp_radius"
+    "k_selected = 18"
    ]
   },
   {
@@ -524,9 +667,17 @@
     "mask[int((win_size-1)/2):-int(win_size/2), int((win_size-1)/2):-int(win_size/2)] = 1\n",
     "\n",
     "print(mask[int((win_size-1)/2):-int(win_size/2), int((win_size-1)/2):-int(win_size/2)].shape)\n",
-    "print(bin_shape)\n",
-    "\n",
-    "fig, ax = plt.subplots(1, 4, figsize=(12, 3))\n",
+    "print(bin_shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6fab6f2-8034-445c-b693-9a1e74b971d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(4, 1, figsize=(7, 6))\n",
     "ax[0].imshow(k_var_map[int((win_size-1)/2):-int(win_size/2), int((win_size-1)/2):-int(win_size/2)], cmap=\"afmhot\")\n",
     "#ax[0].imshow(mask, cmap=\"gray\", alpha=0.5)\n",
     "ax[0].axis(\"off\")\n",
@@ -557,9 +708,17 @@
     "print(dp_ssim.shape)\n",
     "\n",
     "mask = np.zeros(f_flat.shape[:2])\n",
-    "mask[int((win_size-1)/2):-int(win_size/2), int((win_size-1)/2):-int(win_size/2)] = 1\n",
-    "\n",
-    "fig, ax = plt.subplots(1, 2, figsize=(6, 3))\n",
+    "mask[int((win_size-1)/2):-int(win_size/2), int((win_size-1)/2):-int(win_size/2)] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "777612c7-4d24-4d0a-a7a0-51bda2db9fab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(2, 1, figsize=(6, 3))\n",
     "ax[0].imshow(-dp_mse, cmap=\"viridis\")\n",
     "ax[0].axis(\"off\")\n",
     "ax[1].imshow(dp_ssim, cmap=\"viridis\")\n",
@@ -571,38 +730,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1623e83-806d-454b-a0ee-940c174951d2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98113328-3253-48ef-8773-533931f9329f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib qt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b17a0824-fd9a-4498-9d99-9da463c45d75",
    "metadata": {},
    "outputs": [],
    "source": [
     "th_sigma = 0.5\n",
     "high_var = k_var_map.clip(min=(np.mean(k_var_map)+th_sigma*np.std(k_var_map)))[int((win_size-1)/2):-int(win_size/2), int((win_size-1)/2):-int(win_size/2)]\n",
-    "low_dif = local_dif.clip(max=(np.mean(local_dif)-0.5*np.std(local_dif)))\n",
+    "print(high_var.shape)\n",
+    "low_dif = local_dif.clip(max=(np.mean(local_dif)-th_sigma*np.std(local_dif)))\n",
+    "print(low_dif.shape)\n",
     "low_std = local_std.clip(max=(np.mean(local_std)-th_sigma*np.std(local_std)))\n",
+    "print(low_std.shape)\n",
     "high_ssim = dp_ssim.clip(min=(np.mean(dp_ssim)+th_sigma*np.std(dp_ssim)))\n",
+    "print(high_ssim.shape)\n",
     "low_mse = dp_mse.clip(max=(np.mean(dp_mse)-th_sigma*np.std(dp_mse)))\n",
+    "print(low_mse.shape)\n",
     "\n",
-    "fig, ax = plt.subplots(1, 5, figsize=(15, 3))\n",
+    "\n",
+    "fig, ax = plt.subplots(5, 1, figsize=(6, 7))\n",
     "ax[0].imshow(high_var, cmap=\"viridis\")\n",
     "ax[0].axis(\"off\")\n",
     "ax[1].imshow(-low_dif, cmap=\"viridis\")\n",
