--- a/imaging/virtual_imaging_4D_STEM.ipynb
+++ b/imaging/virtual_imaging_4D_STEM.ipynb
@@ -374,6 +374,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fddfc0aa-467b-4c10-b602-5b86e4157be8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "integral-nutrition",
    "metadata": {},
    "outputs": [],
@@ -382,7 +392,7 @@
     "\n",
     "fig, ax = plt.subplots(1, 3, figsize=(30, 10))\n",
     "ax[0].imshow(test.ADF_stem, cmap=\"gray\")\n",
-    "ax[0].quiver(RX.flatten(), RY.flatten(), test.E_field_x.flatten(), test.E_field_y.flatten(), color=cm.jet(mcolors.Normalize()(test.E_mag.flatten())))\n",
+    "ax[0].quiver(RX.flatten(), np.flip(RY, axis=0).flatten(), test.E_field_x.flatten(), test.E_field_y.flatten(), color=cm.jet(mcolors.Normalize()(test.E_mag.flatten())))\n",
     "ax[0].axis(\"off\")\n",
     "#ax[1].imshow(test.ADF_stem, cmap=\"gray\")\n",
     "ax[1].imshow(test.charge_density, cmap=\"RdBu_r\")\n",
