--- a/imaging/virtual_imaging_4D_STEM.ipynb
+++ b/imaging/virtual_imaging_4D_STEM.ipynb
@@ -214,7 +214,16 @@
     "def find_nearest(array, value):\n",
     "    array = np.asarray(array)\n",
     "    idx = (np.abs(array - value)).argmin()\n",
-    "    return idx"
+    "    return idx\n",
+    "\n",
+    "def load_binary_4D_stack(img_adr, datatype, original_shape, final_shape, log_scale=False):\n",
+    "    stack = np.fromfile(img_adr, dtype=datatype)\n",
+    "    stack = stack.reshape(original_shape)\n",
+    "    if log_scale:\n",
+    "        stack = np.log(stack[:final_shape[0], :final_shape[1], :final_shape[2], :final_shape[3]])\n",
+    "    else:\n",
+    "        stack = stack[:final_shape[0], :final_shape[1], :final_shape[2], :final_shape[3]]\n",
+    "    return stack"
    ]
   },
   {
@@ -247,10 +256,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nervous-saturday",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "71724497-079f-4787-b53a-bd25456f6e74",
+   "metadata": {},
    "outputs": [],
    "source": [
     "f_stack = tifffile.imread(raw_adr)\n",
@@ -369,16 +376,6 @@
     "ax[3].axis(\"off\")\n",
     "fig.tight_layout()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fddfc0aa-467b-4c10-b602-5b86e4157be8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib widget"
    ]
   },
   {
