--- a/load_sava_EMPAD.ipynb
+++ b/load_sava_EMPAD.ipynb
@@ -36,7 +36,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_adrs = tkf.askopenfilenames()\n",
+    "raw_adrs = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4de6fde2-3542-488f-bee0-83135b7e4f2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You can repeat this block to add data\n",
+    "raw_adrs.extend(tkf.askopenfilenames())\n",
+    "print(len(raw_adrs))\n",
     "print(*raw_adrs, sep=\"\\n\")"
    ]
   },
@@ -48,8 +60,8 @@
    "outputs": [],
    "source": [
     "datatype = \"float32\"\n",
-    "o_shape = (256, 256, 130, 128)\n",
-    "f_shape = (256, 256, 128, 128)"
+    "f_shape = [256, 256, 128, 128] # the shape of the 4D-STEM data [scanning_y, scanning_x, DP_y, DP_x]\n",
+    "o_shape = [f_shape[0], f_shape[1], f_shape[2]+2, f_shape[3]]"
    ]
   },
   {
@@ -63,7 +75,7 @@
     "    stack_4d = load_binary_4D_stack(adr, datatype, o_shape, f_shape, log_scale=False)\n",
     "    stack_4d = np.transpose(stack_4d, axes=(1, 0, 2, 3))\n",
     "    stack_4d = np.nan_to_num(stack_4d)\n",
-    "    tifffle.imwrite(adr[:-4]+\"_saved_as_tiff_stack.tif\", stack_4d)"
+    "    tifffile.imwrite(adr[:-4]+\"_saved_as_tiff_stack.tif\", stack_4d)"
    ]
   }
  ],
