--- a/FEM/fem_analysis_comparison.ipynb
+++ b/FEM/fem_analysis_comparison.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_split = 2\n",
+    "num_split = 1\n",
     "adr = []\n",
     "num_adr = []\n",
     "for i in range(num_split):\n",
@@ -50,19 +50,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "camera_length = 1.432 # m\n",
-    "pixel_size = 150E-6 # m, EMPAD actual size\n",
-    "mrad_per_pixel = np.arctan(pixel_size / camera_length) * 1000# mrad\n",
-    "#mrad_per_pixel = 0.27045890769499215 # mrad\n",
-    "print(mrad_per_pixel)\n",
     "#rel_lmb = 0.00197 # nm, relativistic wavelength for 300 kV\n",
-    "rel_lmb = 0.00251 # nm, relativistic wavelength for 200 kV\n",
-    "k_per_pixel = np.tan(mrad_per_pixel/1000) / rel_lmb # 1/nm\n",
-    "print(k_per_pixel)\n",
-    "r_per_pixel = 1.05 # nm\n",
+    "#rel_lmb = 0.00251 # nm, relativistic wavelength for 200 kV\n",
+    "k_per_pixel = 0.2079 # 1/nm\n",
+    "r_per_pixel = 2.4416 # nm\n",
     "\n",
     "s_dim = 70\n",
-    "cb_rad = 10\n",
+    "cb_rad = 7\n",
     "k_list = np.arange(s_dim)\n",
     "print(k_list)"
    ]
@@ -333,7 +327,8 @@
    "metadata": {
     "jupyter": {
      "source_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -401,7 +396,8 @@
    "metadata": {
     "jupyter": {
      "source_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -417,7 +413,8 @@
    "metadata": {
     "jupyter": {
      "source_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -501,7 +498,8 @@
    "metadata": {
     "jupyter": {
      "source_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
