--- a/load_save_EMPAD.ipynb
+++ b/load_save_EMPAD.ipynb
@@ -73,7 +73,7 @@
    "source": [
     "for adr in raw_adrs:\n",
     "    stack_4d = load_binary_4D_stack(adr, datatype, o_shape, f_shape, log_scale=False)\n",
-    "    stack_4d = np.transpose(stack_4d, axes=(1, 0, 2, 3))\n",
+    "    stack_4d = np.flip(stack_4d, axis=2)\n",
     "    stack_4d = np.nan_to_num(stack_4d)\n",
     "    tifffile.imwrite(adr[:-4]+\"_saved_as_tiff_stack.tif\", stack_4d)"
    ]
