--- a/4D-STEM_viewer.ipynb
+++ b/4D-STEM_viewer.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "datatype = \"float32\"\n",
-    "f_shape = [128, 128, 128, 128] # the shape of the 4D-STEM data [scanning_y, scanning_x, DP_y, DP_x]\n",
+    "f_shape = [256, 256, 128, 128] # the shape of the 4D-STEM data [scanning_y, scanning_x, DP_y, DP_x]\n",
     "o_shape = [f_shape[0], f_shape[1], f_shape[2]+2, f_shape[3]]"
    ]
   },
@@ -68,7 +68,7 @@
    "source": [
     "if img_adr[-3:] == \"raw\":\n",
     "    stack_4d = load_binary_4D_stack(img_adr, datatype, o_shape, f_shape, log_scale=False)\n",
-    "    stack_4d = np.transpose(stack_4d, axes=(1, 0, 2, 3))\n",
+    "    stack_4d = np.flip(stack_4d, axis=2)\n",
     "    stack_4d = np.nan_to_num(stack_4d)\n",
     "    \n",
     "elif img_adr[-3:] == \"tif\" or img_adr[:-4] == \"tiff\":\n",
@@ -83,6 +83,16 @@
     "\n",
     "stack_4d = stack_4d.clip(min=0.0)\n",
     "stack_4d_original = stack_4d.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "881813c6-c50a-4f21-85de-dff9a0bce5f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stack_4d = np.flip(stack_4d, axis=2)"
    ]
   },
   {
@@ -281,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
