--- a/imaging/virtual_imaging_4D_STEM.ipynb
+++ b/imaging/virtual_imaging_4D_STEM.ipynb
@@ -11,7 +11,7 @@
     "<strong>Department of Materials Science and Engineering<br></strong>\n",
     "<strong>Seoul National University<br><br></strong>\n",
     "\n",
-    "<strong>last update : 20210929</strong>"
+    "<strong>last update : 20221122</strong>"
    ]
   },
   {
@@ -340,7 +340,7 @@
     "ax[0][0].scatter(test.ct[1], test.ct[0], s=15, c=\"k\")\n",
     "ax[0][0].set_title(\"BF detector\")\n",
     "ax[0][0].axis(\"off\")\n",
-    "ax[0][1].imshow(test.BF_stem, cmap=\"afmhot\")\n",
+    "ax[0][1].imshow(test.BF_stem, cmap=\"inferno\", origin=\"lower\")\n",
     "ax[0][1].set_title(\"BF-STEM image\")\n",
     "ax[0][1].axis(\"off\")\n",
     "ax[1][0].imshow(test.original_pacbed, cmap=\"jet\")\n",
@@ -348,7 +348,7 @@
     "ax[1][0].scatter(test.ct[1], test.ct[0], s=15, c=\"k\")\n",
     "ax[1][0].set_title(\"ADF detector\")\n",
     "ax[1][0].axis(\"off\")\n",
-    "ax[1][1].imshow(test.ADF_stem, cmap=\"afmhot\")\n",
+    "ax[1][1].imshow(test.ADF_stem, cmap=\"inferno\", origin=\"lower\")\n",
     "ax[1][1].set_title(\"ADF-STEM image\")\n",
     "ax[1][1].axis(\"off\")\n",
     "fig.tight_layout()\n",
@@ -366,13 +366,13 @@
     "\n",
     "print(\"optimized angle =\", test.c_theta*180/np.pi)\n",
     "fig, ax = plt.subplots(1, 4, figsize=(28, 7))\n",
-    "ax[0].imshow(test.ADF_stem, cmap=\"afmhot\")\n",
+    "ax[0].imshow(test.ADF_stem, cmap=\"inferno\", origin=\"lower\")\n",
     "ax[0].axis(\"off\")\n",
-    "ax[1].imshow(test.E_field_y, cmap=\"gray\")\n",
+    "ax[1].imshow(test.E_field_y, cmap=\"gray\", origin=\"lower\")\n",
     "ax[1].axis(\"off\")\n",
-    "ax[2].imshow(test.E_field_x, cmap=\"gray\")\n",
+    "ax[2].imshow(test.E_field_x, cmap=\"gray\", origin=\"lower\")\n",
     "ax[2].axis(\"off\")\n",
-    "ax[3].imshow(test.E_mag, cmap=\"inferno\")\n",
+    "ax[3].imshow(test.E_mag, cmap=\"inferno\", origin=\"lower\")\n",
     "ax[3].axis(\"off\")\n",
     "fig.tight_layout()\n",
     "plt.show()"
@@ -388,14 +388,14 @@
     "RY, RX = np.indices(test.c_shape[:2])\n",
     "\n",
     "fig, ax = plt.subplots(1, 3, figsize=(30, 10))\n",
-    "ax[0].imshow(test.ADF_stem, cmap=\"gray\")\n",
-    "ax[0].quiver(RX.flatten(), np.flip(RY, axis=0).flatten(), test.E_field_x.flatten(), test.E_field_y.flatten(), color=cm.jet(mcolors.Normalize()(test.E_mag.flatten())))\n",
-    "ax[0].axis(\"off\")\n",
+    "ax[0].imshow(test.ADF_stem, cmap=\"gray\", origin=\"lower\")\n",
+    "ax[0].quiver(RX.flatten(), RY.flatten(), test.E_field_x.flatten(), test.E_field_y.flatten(), color=cm.jet(mcolors.Normalize()(test.E_mag.flatten())))\n",
+    "#ax[0].axis(\"off\")\n",
     "#ax[1].imshow(test.ADF_stem, cmap=\"gray\")\n",
-    "ax[1].imshow(test.charge_density, cmap=\"RdBu_r\")\n",
+    "ax[1].imshow(test.charge_density, cmap=\"RdBu_r\", origin=\"lower\")\n",
     "ax[1].axis(\"off\")\n",
     "#ax[2].imshow(test.ADF_stem, cmap=\"gray\")\n",
-    "ax[2].imshow(test.potential, cmap=\"RdBu_r\")\n",
+    "ax[2].imshow(test.potential, cmap=\"inferno\", origin=\"lower\")\n",
     "ax[2].axis(\"off\")\n",
     "fig.tight_layout()\n",
     "plt.show()"
@@ -441,10 +441,10 @@
     "rotated_stack, rot_sym_img, mir_sym_img = test.symmetry_evaluation(rot_angle, also_mirror=True)\n",
     "print(\"%d seconds have passed\"%(time.process_time()-start))\n",
     "fig, ax = plt.subplots(1, 2, figsize=(10,5))\n",
-    "ax[0].imshow(rot_sym_img, cmap=\"inferno\")\n",
+    "ax[0].imshow(rot_sym_img, cmap=\"inferno\", origin=\"lower\")\n",
     "ax[0].set_title(\"Rotation angle: {}\".format(rot_angle))\n",
     "ax[0].axis(\"off\")\n",
-    "ax[1].imshow(mir_sym_img, cmap=\"inferno\")\n",
+    "ax[1].imshow(mir_sym_img, cmap=\"inferno\", origin=\"lower\")\n",
     "ax[1].set_title(\"Mirror angle: {}\".format(rot_angle))\n",
     "ax[1].axis(\"off\")\n",
     "plt.show()"
@@ -495,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
