--- a/imaging/virtual_imaging_4D_STEM.ipynb
+++ b/imaging/virtual_imaging_4D_STEM.ipynb
@@ -28,11 +28,11 @@
     "\n",
     "class sstem_python():\n",
     "    \n",
-    "    def __init__(self, f_stack, ang_per_pixel, mrad_per_pixel):\n",
+    "    def __init__(self, f_stack, scan_per_pixel, mrad_per_pixel):\n",
     "        self.original_stack = f_stack\n",
     "        self.original_shape = f_stack.shape\n",
     "        self.original_pacbed = np.mean(self.original_stack, axis=(0, 1))\n",
-    "        self.ang_per_pixel = ang_per_pixel\n",
+    "        self.scan_per_pixel = scan_per_pixel\n",
     "        self.mrad_per_pixel = mrad_per_pixel\n",
     "    \n",
     "    def find_center(self):\n",
@@ -289,9 +289,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ang_per_pixel = 1\n",
+    "semiangle = 20 # mrad\n",
+    "scan_per_pixel = 1\n",
     "mrad_per_pixel = 1\n",
-    "test = sstem_python(f_stack, ang_per_pixel, mrad_per_pixel)\n",
+    "test = sstem_python(f_stack, scan_per_pixel, mrad_per_pixel)\n",
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
     "ax.imshow(test.original_pacbed, cmap=\"jet\")\n",
@@ -344,8 +345,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BF_det = np.array([0, test.least_R]) / mrad_per_pixel\n",
-    "ADF_det = np.array([1.5*test.least_R, 2.0*test.least_R]) / mrad_per_pixel\n",
+    "BF_det = np.array([10, semiangle]) / mrad_per_pixel\n",
+    "ADF_det = np.array([semiangle, semiangle*2]) / mrad_per_pixel\n",
     "\n",
     "print(BF_det, ADF_det)\n",
     "\n",
