--- a/imaging/virtual_imaging_4D_STEM.ipynb
+++ b/imaging/virtual_imaging_4D_STEM.ipynb
@@ -345,8 +345,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BF_det = np.array([10, semiangle]) / mrad_per_pixel\n",
-    "ADF_det = np.array([semiangle, semiangle*2]) / mrad_per_pixel\n",
+    "BF_det = np.array([10, semiangle])\n",
+    "ADF_det = np.array([semiangle, semiangle*2])\n",
     "\n",
     "print(BF_det, ADF_det)\n",
     "\n",
