--- a/imaging/virtual_imaging_4D_STEM.ipynb
+++ b/imaging/virtual_imaging_4D_STEM.ipynb
@@ -11,7 +11,7 @@
     "<strong>Department of Materials Science and Engineering<br></strong>\n",
     "<strong>Seoul National University<br><br></strong>\n",
     "\n",
-    "<strong>last update : 20221122</strong>"
+    "<strong>last update : 20221207</strong>"
    ]
   },
   {
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import cv2\n",
+    "#import cv2\n",
     "\n",
     "class sstem_python():\n",
     "    \n",
@@ -34,7 +34,23 @@
     "        self.original_pacbed = np.mean(self.original_stack, axis=(0, 1))\n",
     "        self.scan_per_pixel = scan_per_pixel\n",
     "        self.mrad_per_pixel = mrad_per_pixel\n",
-    "    \n",
+    "        \n",
+    "        self.intensity_integration_map = np.sum(f_stack, axis=(2, 3))\n",
+    "        \n",
+    "    def spike_remove(self, percent_thresh, apply_remove=False):\n",
+    "        threshold = np.percentile(self.intensity_integration_map, percent_thresh)\n",
+    "        spike_ind = np.where(self.intensity_integration_map > threshold)\n",
+    "        \n",
+    "        print(\"threshold value = %f\"%threshold)\n",
+    "        print(\"number of abnormal pixels = %d\"%len(spike_ind[0]))\n",
+    "        \n",
+    "        self.spike_replaced = self.intensity_integration_map.copy()\n",
+    "        self.spike_replaced[spike_ind] = np.sum(self.original_pacbed)\n",
+    "        \n",
+    "        if apply_remove:\n",
+    "            self.original_stack[spike_ind] = self.original_pacbed.copy()\n",
+    "            self.original_pacbed = np.mean(self.original_stack, axis=(0, 1))\n",
+    "        \n",
     "    def find_center(self):\n",
     "        \n",
     "        Y, X = np.indices(self.original_pacbed.shape)\n",
@@ -253,7 +269,7 @@
     "print(raw_adr)\n",
     "\n",
     "datatype = \"float32\"\n",
-    "f_shape = [256, 256, 128, 128] # the shape of the 4D-STEM data [scanning_y, scanning_x, DP_y, DP_x]\n",
+    "f_shape = [256, 64, 128, 128] # the shape of the 4D-STEM data [scanning_y, scanning_x, DP_y, DP_x]\n",
     "o_shape = [f_shape[0], f_shape[1], f_shape[2]+2, f_shape[3]]"
    ]
   },
@@ -294,6 +310,34 @@
     "mrad_per_pixel = 1\n",
     "test = sstem_python(f_stack, scan_per_pixel, mrad_per_pixel)\n",
     "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
+    "ax.imshow(test.intensity_integration_map, cmap=\"inferno\")\n",
+    "ax.axis(\"off\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cca06347-b3aa-4977-883b-bd6d1bb21252",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test.spike_remove(percent_thresh=99.9, apply_remove=True)\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
+    "ax.imshow(test.spike_replaced, cmap=\"inferno\")\n",
+    "ax.axis(\"off\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a1dbcff-77f0-414d-8549-a4e516eaf542",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
     "ax.imshow(test.original_pacbed, cmap=\"jet\")\n",
     "ax.axis(\"off\")\n",
@@ -345,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BF_det = np.array([10, semiangle])\n",
+    "BF_det = np.array([0, semiangle])\n",
     "ADF_det = np.array([semiangle, semiangle*2])\n",
     "\n",
     "print(BF_det, ADF_det)\n",
