--- a/4D-STEM_viewer.ipynb
+++ b/4D-STEM_viewer.ipynb
@@ -33,101 +33,8 @@
     "        stack = np.log(stack[:final_shape[0], :final_shape[1], :final_shape[2], :final_shape[3]])\n",
     "    else:\n",
     "        stack = stack[:final_shape[0], :final_shape[1], :final_shape[2], :final_shape[3]]\n",
-    "    return stack"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "393ddb5e-575f-47c5-a5c2-c4a3c95d044f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img_adr = tkf.askopenfilename()\n",
-    "print(img_adr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29ad56ae-6504-4567-8a49-000ca3b1839a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "datatype = \"float32\"\n",
-    "f_shape = [256, 256, 128, 128] # the shape of the 4D-STEM data [scanning_y, scanning_x, DP_y, DP_x]\n",
-    "o_shape = [f_shape[0], f_shape[1], f_shape[2]+2, f_shape[3]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "153911e6-550d-447d-b50f-bbd3e2764fff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if img_adr[-3:] == \"raw\":\n",
-    "    stack_4d = load_binary_4D_stack(img_adr, datatype, o_shape, f_shape, log_scale=False)\n",
-    "    stack_4d = np.flip(stack_4d, axis=2)\n",
-    "    stack_4d = np.nan_to_num(stack_4d)\n",
-    "    \n",
-    "elif img_adr[-3:] == \"tif\" or img_adr[:-4] == \"tiff\":\n",
-    "    stack_4d = tifffile.imread(img_adr)\n",
-    "    \n",
-    "else:\n",
-    "    print(\"The format of the file is not supported here\")\n",
-    "    \n",
-    "print(stack_4d.shape)\n",
-    "print(stack_4d.min(), stack_4d.max())\n",
-    "print(stack_4d.mean())\n",
+    "    return stack\n",
     "\n",
-    "stack_4d = stack_4d.clip(min=0.0)\n",
-    "stack_4d_original = stack_4d.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c389f291-c956-4e59-8368-8d0ab2e70ddc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# select an interesting area\n",
-    "%matplotlib qt\n",
-    "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
-    "ax.imshow(np.sum(stack_4d_original, axis=(2, 3)), cmap=\"gray\")\n",
-    "\n",
-    "def onselect(eclick, erelease):\n",
-    "    print('startposition: (%d, %d)'%(int(eclick.xdata), int(eclick.ydata)))\n",
-    "    print('endposition  : (%d, %d)'%(int(erelease.xdata), int(erelease.ydata)))\n",
-    "    print('width : %d'%(int(erelease.xdata)-int(eclick.xdata)))\n",
-    "    print('height : %d'%(int(erelease.ydata)-int(eclick.ydata)))\n",
-    "\n",
-    "box = RectangleSelector(ax, onselect)\n",
-    "fig.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92d5a3cd-1d17-45c6-81ce-7dd5fcffd6a7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# crop the data\n",
-    "stack_4d = stack_4d_original[int(box.corners[1][0]):int(box.corners[1][2]), \n",
-    "                            int(box.corners[0][0]):int(box.corners[0][1])].copy()\n",
-    "print(stack_4d.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5a98a23-52b5-40dc-bec7-56c606803851",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "class fourd_viewer:\n",
     "    def __init__(self, fig, ax, fdata):\n",
     "        self.fig = fig\n",
@@ -230,6 +137,91 @@
     "        self.ax[2].axis(\"off\")\n",
     "        \n",
     "        self.fig.canvas.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29ad56ae-6504-4567-8a49-000ca3b1839a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datatype = \"float32\"\n",
+    "f_shape = [256, 256, 128, 128] # the shape of the 4D-STEM data [scanning_y, scanning_x, DP_y, DP_x]\n",
+    "o_shape = [f_shape[0], f_shape[1], f_shape[2]+2, f_shape[3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "393ddb5e-575f-47c5-a5c2-c4a3c95d044f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_adr = tkf.askopenfilename()\n",
+    "print(img_adr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "153911e6-550d-447d-b50f-bbd3e2764fff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if img_adr[-3:] == \"raw\":\n",
+    "    stack_4d = load_binary_4D_stack(img_adr, datatype, o_shape, f_shape, log_scale=False)\n",
+    "    stack_4d = np.flip(stack_4d, axis=2)\n",
+    "    stack_4d = np.nan_to_num(stack_4d)\n",
+    "    \n",
+    "elif img_adr[-3:] == \"tif\" or img_adr[:-4] == \"tiff\":\n",
+    "    stack_4d = tifffile.imread(img_adr)\n",
+    "    \n",
+    "else:\n",
+    "    print(\"The format of the file is not supported here\")\n",
+    "    \n",
+    "print(stack_4d.shape)\n",
+    "print(stack_4d.min(), stack_4d.max())\n",
+    "print(stack_4d.mean())\n",
+    "\n",
+    "stack_4d = stack_4d.clip(min=0.0)\n",
+    "stack_4d_original = stack_4d.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c389f291-c956-4e59-8368-8d0ab2e70ddc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select an interesting area\n",
+    "%matplotlib qt\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
+    "ax.imshow(np.sum(stack_4d_original, axis=(2, 3)), cmap=\"gray\")\n",
+    "\n",
+    "def onselect(eclick, erelease):\n",
+    "    print('startposition: (%d, %d)'%(int(eclick.xdata), int(eclick.ydata)))\n",
+    "    print('endposition  : (%d, %d)'%(int(erelease.xdata), int(erelease.ydata)))\n",
+    "    print('width : %d'%(int(erelease.xdata)-int(eclick.xdata)))\n",
+    "    print('height : %d'%(int(erelease.ydata)-int(eclick.ydata)))\n",
+    "\n",
+    "box = RectangleSelector(ax, onselect)\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92d5a3cd-1d17-45c6-81ce-7dd5fcffd6a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# crop the data\n",
+    "stack_4d = stack_4d_original[int(box.corners[1][0]):int(box.corners[1][2]), \n",
+    "                            int(box.corners[0][0]):int(box.corners[0][1])].copy()\n",
+    "print(stack_4d.shape)"
    ]
   },
   {
