--- a/load_save_EMPAD.ipynb
+++ b/load_save_EMPAD.ipynb
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "datatype = \"float32\"\n",
-    "f_shape = [128, 128, 128, 128] # the shape of the 4D-STEM data [scanning_y, scanning_x, DP_y, DP_x]\n",
+    "f_shape = [256, 256, 128, 128] # the shape of the 4D-STEM data [scanning_y, scanning_x, DP_y, DP_x]\n",
     "o_shape = [f_shape[0], f_shape[1], f_shape[2]+2, f_shape[3]]"
    ]
   },
@@ -72,6 +72,7 @@
    "outputs": [],
    "source": [
     "for adr in raw_adrs:\n",
+    "    print(adr)\n",
     "    stack_4d = load_binary_4D_stack(adr, datatype, o_shape, f_shape, log_scale=False)\n",
     "    stack_4d = np.flip(stack_4d, axis=2)\n",
     "    stack_4d = np.nan_to_num(stack_4d)\n",
