--- a/FEM/fem_analysis_revised.ipynb
+++ b/FEM/fem_analysis_revised.ipynb
@@ -10,11 +10,11 @@
     "# J. Ryu, Electron Microscopy and Spectroscopy Lab., Seoul National University\n",
     "from scipy import stats\n",
     "import numpy as np\n",
-    "import hyperspy.api as hys\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.patches as pch\n",
     "import tkinter.filedialog as tkf\n",
     "from scipy import optimize\n",
+    "from scipy import ndimage\n",
     "import ipywidgets as pyw\n",
     "import time\n",
     "import tifffile\n",
@@ -226,9 +226,7 @@
    "outputs": [],
    "source": [
     "# Load a data (DM)\n",
-    "stack_4d = hys.load(raw_adr).data\n",
-    "stack_4d = fourd_roll_axis(stack_4d)\n",
-    "#stack_4d = tifffile.imread(raw_adr)\n",
+    "stack_4d = tifffile.imread(raw_adr)\n",
     "print(stack_4d.shape)\n",
     "f_shape = stack_4d.shape\n",
     "\n",
@@ -390,99 +388,7 @@
     "fig, ax = plt.subplots(1, 4, figsize=(12, 3))\n",
     "ax[0].imshow(np.log(mean_dp), cmap=\"gray\")\n",
     "ax[0].axis(\"off\")\n",
-    "ax[1].plot(mean_dp_radial_avg[10:], \"k-\")\n",
-    "ax[1].grid()\n",
-    "ax[2].imshow(var_map, cmap=\"inferno\")\n",
-    "ax[2].axis(\"off\")\n",
-    "ax[3].plot(kp_var, \"k-\")\n",
-    "ax[3].grid()\n",
-    "fig.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03b8110e-c588-47a4-83b0-60d8b41553d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "side_length = 40\n",
-    "box_size = np.array([side_length, side_length])\n",
-    "dataset = []\n",
-    "\n",
-    "h_si = np.floor(c_pos[0]-box_size[0]).astype(int)\n",
-    "h_fi = np.ceil(c_pos[0]+box_size[0]).astype(int)\n",
-    "w_si = np.floor(c_pos[1]-box_size[1]).astype(int)\n",
-    "w_fi = np.ceil(c_pos[1]+box_size[1]).astype(int)\n",
-    "\n",
-    "stack_4d = stack_4d[:, :, h_si:h_fi, w_si:w_fi]\n",
-    "f_shape = stack_4d.shape\n",
-    "print(f_shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c377495c-e551-415e-a337-16098f476c76",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# find the center position (center of mass)\n",
-    "mean_dp = np.mean(stack_4d, axis=(0, 1))\n",
-    "cbox_edge = 30\n",
-    "cbox_outy = int(mean_dp.shape[0]/2 - cbox_edge/2)\n",
-    "cbox_outx = int(mean_dp.shape[1]/2 - cbox_edge/2)\n",
-    "center_box = mean_dp[cbox_outy:-cbox_outy, cbox_outx:-cbox_outx]\n",
-    "Y, X = np.indices(center_box.shape)\n",
-    "com_y = np.sum(center_box * Y) / np.sum(center_box)\n",
-    "com_x = np.sum(center_box * X) / np.sum(center_box)\n",
-    "c_pos = [com_y+cbox_outy, com_x+cbox_outx]\n",
-    "print(c_pos)\n",
-    "\n",
-    "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
-    "ax.imshow(mean_dp, cmap=\"gray\")\n",
-    "ax.axis(\"off\")\n",
-    "ax.scatter(c_pos[1], c_pos[0], s=15, c=\"r\")\n",
-    "ax.add_patch(pch.Rectangle((cbox_outx, cbox_outy), cbox_edge, cbox_edge, \n",
-    "                           linewidth=1, edgecolor=\"r\", facecolor=\"none\"))\n",
-    "fig.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3bf6864-3a8d-4cae-816a-eabeee8fc7b8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "radial_map, mean_dp_radial_avg = radial_stats(mean_dp, center=c_pos, var=False)\n",
-    "\n",
-    "# obtain variance map dpending on k-vector\n",
-    "square_avg = np.mean(np.square(stack_4d), axis=(0,1))\n",
-    "avg_square = np.square(np.mean(stack_4d, axis=(0,1)))\n",
-    "mask = avg_square.copy()\n",
-    "mask[np.where(avg_square == 0)] = 1.0\n",
-    "var_map = (square_avg - avg_square) / mask\n",
-    "\n",
-    "# obtain radial average prifile for variance map above\n",
-    "radial_map, kp_var = radial_stats(var_map, center=c_pos, var=False)\n",
-    "print(kp_var.shape)\n",
-    "print(np.argmax(kp_var))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "827062ad-4863-4ca3-830b-3defe24117ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots(1, 4, figsize=(10, 3))\n",
-    "ax[0].imshow(np.log(mean_dp), cmap=\"gray\")\n",
-    "ax[0].axis(\"off\")\n",
-    "ax[1].plot(mean_dp_radial_avg, \"k-\")\n",
+    "ax[1].plot(np.arange(len(mean_dp_radial_avg)-5)+5, mean_dp_radial_avg[5:], \"k-\")\n",
     "ax[1].grid()\n",
     "ax[2].imshow(var_map, cmap=\"inferno\")\n",
     "ax[2].axis(\"off\")\n",
@@ -557,7 +463,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(10, 5))\n",
-    "ax.plot(radial_avg_sum, \"k-\")\n",
+    "ax.plot(np.arange(len(radial_avg_sum)-5)+5, radial_avg_sum[5:], \"k-\")\n",
     "ax.grid()\n",
     "fig.tight_layout()\n",
     "plt.show()"
@@ -702,7 +608,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmp_radius = [25, 42]\n",
+    "tmp_radius = [21, 22, 23]\n",
     "\n",
     "fig, ax = plt.subplots(1, 1, figsize=(5, 5))\n",
     "ax.imshow(np.log(stack_4d[10, 10]))\n",
@@ -733,7 +639,7 @@
    "source": [
     "win_size = 3\n",
     "stride = 1\n",
-    "k_selected = 25"
+    "k_selected = 22"
    ]
   },
   {
@@ -922,7 +828,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_selected = 25\n",
+    "k_selected = 22\n",
     "k_var_map = radial_var[:, :, k_selected].copy()\n",
     "k_ind, a_ind = indices_at_r(f_shape[2:], k_selected, c_pos)\n",
     "f_flat = stack_4d[:, :, k_ind[0], k_ind[1]]\n",
@@ -982,16 +888,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5718515-f47c-43c0-b288-2671b966b7d9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "48be414a-156b-4bbd-8413-12b709a851a9",
    "metadata": {},
    "outputs": [],
@@ -1038,7 +934,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "th_sigma = 2.9\n",
+    "th_sigma = 1.35\n",
     "high_ssim = dp_ssim.clip(min=(np.mean(dp_ssim)+th_sigma*np.std(dp_ssim)))\n",
     "high_ind = np.where(high_ssim > (np.mean(dp_ssim)+th_sigma*np.std(dp_ssim)))\n",
     "\n",
@@ -1086,6 +982,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c1ba0ba-8196-48a2-b5d5-9524335c7766",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_range = np.arange(19, 24, 1)\n",
+    "start_time = time.process_time()\n",
+    "ac_spectra = []\n",
+    "ac_fft_stack = []\n",
+    "angle_sampling = 361\n",
+    "angles = np.arange(angle_sampling)\n",
+    "tril_mask = np.ones((angle_sampling, angle_sampling))\n",
+    "tril_mask = np.triu(tril_mask, 0)\n",
+    "tril_mask[np.where(tril_mask==0)] = np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f8f6cf0-2bbc-42bb-9230-6d8ed84e4690",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_ind, a_ind = indices_at_r(f_shape[2:], 22, c_pos)\n",
+    "\n",
+    "value_sel = stack_4d[49, 100, k_ind[0], k_ind[1]]\n",
+    "values = np.zeros(angle_sampling)\n",
+    "values[a_ind.astype(int)] = value_sel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cac6ec4a-7f16-4a36-9afe-798be8691eba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(2, 1)\n",
+    "ax[0].plot(values)\n",
+    "ax[1].plot(ndimage.gaussian_filter(values, sigma=1.0))\n",
+    "fig.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f9ead1a1-e8fd-4afe-b990-82cfc12e7bb1",
    "metadata": {},
@@ -1102,7 +1044,7 @@
    },
    "outputs": [],
    "source": [
-    "k_range = np.arange(20, 40, 5)\n",
+    "k_range = np.arange(19, 24, 1)\n",
     "start_time = time.process_time()\n",
     "ac_spectra = []\n",
     "ac_fft_stack = []\n",
@@ -1121,6 +1063,7 @@
     "            value_sel = stack_4d[i, j, k_ind[0], k_ind[1]]\n",
     "            values = np.zeros(angle_sampling)\n",
     "            values[a_ind.astype(int)] = value_sel\n",
+    "            values = ndimage.gaussian_filter(values, sigma=2.0)\n",
     "\n",
     "            dummy = np.roll(values, 1)\n",
     "            value_stack = np.vstack((values, dummy))\n",
@@ -1184,7 +1127,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_ind = np.where(k_range==25)[0][0]\n",
+    "k_selected = 19\n",
+    "k_ind = np.where(k_range==k_selected)[0][0]\n",
     "print(k_ind)\n",
     "rot_sym = [2, 3, 4, 5, 6, 10]\n",
     "\n",
@@ -1194,15 +1138,19 @@
     "ang_corr_rot = np.asarray(ang_corr_rot)\n",
     "print(ang_corr_rot.shape)\n",
     "\n",
+    "ang_max_val = np.max(ang_corr_rot)\n",
+    "ang_min_val = np.min(ang_corr_rot)\n",
+    "\n",
     "k_var_map = radial_var[:, :, k_selected]\n",
+    "\n",
     "for i, r in enumerate(rot_sym):\n",
     "    fig, ax = plt.subplots(1, 3, figsize=(15, 5))\n",
-    "    ax[0].imshow(ang_corr_rot[i], cmap=\"afmhot\")\n",
+    "    ax[0].imshow(ang_corr_rot[i], cmap=\"inferno\", vmin=ang_min_val, vmax=ang_max_val)\n",
     "    ax[0].axis(\"off\")\n",
     "    ax[0].set_title(\"rotation symmetry %d\"%r)\n",
-    "    ax[1].imshow(k_var_map, cmap=\"afmhot\")\n",
+    "    ax[1].imshow(k_var_map, cmap=\"inferno\")\n",
     "    ax[1].axis(\"off\")\n",
-    "    ax[2].imshow(ang_corr_rot[i], cmap=\"afmhot\", alpha=0.8)\n",
+    "    ax[2].imshow(ang_corr_rot[i], cmap=\"inferno\", alpha=0.8)\n",
     "    ax[2].contour(k_var_map, colors=\"k\", alpha=1.0, levels=5)\n",
     "    ax[2].axis(\"off\")\n",
     "    fig.tight_layout()\n",
@@ -1226,7 +1174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
